# im-tui

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  db.rs  error.rs  formatter.rs  main.rs  sender.rs  tui.rs
src/tui/: chat.rs  common.rs  contacts.rs  mod.rs  setup.rs
