[package]
name = "im-tui"
version = "0.2.0"
edition = "2021"
authors = ["Justin Wang <justinwang46@gmail.com>"]
description = "a tui for sending and receiving iMessages"
readme = "README.md"
repository = "https://github.com/justinwangx/im-tui"
license = "MIT"
keywords = ["cli", "macos", "messages", "imessage", "tui"]
categories = ["command-line-utilities", "terminal-utilities"]

[[bin]]
name = "im"
path = "src/main.rs"

[dependencies]
rusqlite = "0.29.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.5"
chrono = "0.4"
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
